--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "hexlet-code"
 version = "0.1.0"
 description = ""
 authors = ["ArtShai <rinatha93@mail.ru>"]
+packages = [  {include = "gendiff" }, ]
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -12,3 +13,6 @@ python = "^3.8"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.script]
+gendiff = "gendiff.script.gendiff:main"
