--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,5 @@ python = "^3.8"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.script]
+[tool.poetry.scripts]
 gendiff = "gendiff.script.gendiff:main"
