--- a/.github/workflows/action-check.yml
+++ b/.github/workflows/action-check.yml
@@ -25,7 +25,12 @@ jobs:
       - name: Run linter and pytest
         run: |
           make lint
-      - name: Test & publish code coverage
+      #- name: Test & publish code coverage
+      - name: Test with pytest
+        run: |
+          pip install pytest
+          pip install pytest-cov
+          pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
         uses: paambaati/codeclimate-action@v3.2.0
         if: github.ref_name == 'main'
         env:
