--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [  {include = "gendiff" }, ]
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+pytest = "^7.2.1"
+flake8 = "^5.0.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
