--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ packages = [  {include = "gendiff" }, ]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.2.1"
